Fix - button overlapping drop down menu

--- a/client/templates/profile/self/self.sass
+++ b/client/templates/profile/self/self.sass
@@ -17,3 +17,4 @@ $profile-self: "profile-self"
     .new-initiative
       float: right
       margin-top: -50px
+      z-index: 0 
